--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,12 @@ project(
 )
 
 #### Prompt the build type ####
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
-endif()
+# if(NOT CMAKE_BUILD_TYPE)
+set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "" FORCE)
+# endif()
 message("Configuring ${CMAKE_PROJECT_NAME} ${CMAKE_PROJECT_Version}...")
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DRAMULATOR_DEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "-g ${CMAKE_CXX_FLAGS_DEBUG} -DRAMULATOR_DEBUG")
 # set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 ###############################
@@ -32,9 +32,9 @@ option(YAML_CPP_BUILD_CONTRIB "Enable yaml-cpp contrib in library" OFF)
 option(YAML_CPP_BUILD_TOOLS "Enable parse tools" OFF)
 option(YAML_BUILD_SHARED_LIBS "Build yaml-cpp as a shared library" OFF)
 FetchContent_Declare(
-  yaml-cpp                             
+  yaml-cpp
   GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git
-  GIT_TAG        yaml-cpp-0.7.0                        
+  GIT_TAG        yaml-cpp-0.7.0
   SOURCE_DIR     ${CMAKE_SOURCE_DIR}/ext/yaml-cpp
 )
 FetchContent_MakeAvailable(yaml-cpp)
@@ -43,9 +43,9 @@ message("Done configuring yaml-cpp.")
 
 message("Configuring spdlog...")
 FetchContent_Declare(
-  spdlog                             
+  spdlog
   GIT_REPOSITORY https://github.com/gabime/spdlog.git
-  GIT_TAG        v1.11.0     
+  GIT_TAG        v1.11.0
   SOURCE_DIR     ${CMAKE_SOURCE_DIR}/ext/spdlog
 )
 FetchContent_MakeAvailable(spdlog)
@@ -56,7 +56,7 @@ message("Configuring argparse...")
 FetchContent_Declare(
     argparse
     GIT_REPOSITORY https://github.com/p-ranav/argparse.git
-    GIT_TAG        v2.9     
+    GIT_TAG        v2.9
     SOURCE_DIR     ${CMAKE_SOURCE_DIR}/ext/argparse
 )
 FetchContent_MakeAvailable(argparse)
@@ -71,22 +71,22 @@ set_target_properties(ramulator PROPERTIES
   LIBRARY_OUTPUT_DIRECTORY  ${PROJECT_SOURCE_DIR}
 )
 target_link_libraries(
-  ramulator 
+  ramulator
   PUBLIC yaml-cpp
   PUBLIC spdlog
 )
 
 add_executable(ramulator-exe)
 target_link_libraries(
-  ramulator-exe 
-  # PRIVATE -Wl,--whole-archive ramulator -Wl,--no-whole-archive 
+  ramulator-exe
+  # PRIVATE -Wl,--whole-archive ramulator -Wl,--no-whole-archive
   PRIVATE ramulator
   PRIVATE argparse
 )
 
 set_target_properties(
   ramulator-exe
-  PROPERTIES 
+  PROPERTIES
   OUTPUT_NAME ramulator2
 )
 
