Modified the DDR4 to 1 bank level model,simulator inifinite loop

--- a/cacti/3DDRAM_Design_Exploration/Configs/3DDRAM_DDR3_1Gb_128.cfg
+++ b/cacti/3DDRAM_Design_Exploration/Configs/3DDRAM_DDR3_1Gb_128.cfg
@@ -34,7 +34,7 @@
 -single ended read ports 0
 
 # Multiple banks connected using a bus
--UCA bank count 4
+-UCA bank count 1 # This means 1 bank per die, thus 4 banks in total for 4 layers
 //-technology (u) 0.032
 -technology (u) 0.040
 //-technology (u) 0.065
@@ -145,8 +145,8 @@
 # Set it to NONE to let weight and deviate values determine the
 # appropriate cache configuration
 //-Optimize ED or ED^2 (ED, ED^2, NONE): "ED"
-//-Optimize ED or ED^2 (ED, ED^2, NONE): "ED^2"
--Optimize ED or ED^2 (ED, ED^2, NONE): "NONE"
+-Optimize ED or ED^2 (ED, ED^2, NONE): "ED^2"
+//-Optimize ED or ED^2 (ED, ED^2, NONE): "NONE"
 
 -Cache model (NUCA, UCA)  - "UCA"
 //-Cache model (NUCA, UCA)  - "NUCA"
@@ -163,8 +163,8 @@
 # wires to find an optimal configuration. However, it is possible to
 # restrict the search space by changing the signaling from "default" to
 # "fullswing" or "lowswing" type.
-//-Wire signaling (fullswing, lowswing, default) - "default"
--Wire signaling (fullswing, lowswing, default) - "Global_5"
+-Wire signaling (fullswing, lowswing, default) - "default"
+//-Wire signaling (fullswing, lowswing, default) - "Global_5"
 //-Wire signaling (fullswing, lowswing, default) - "lowswing"
 
 //-Wire inside mat - "global"
@@ -209,8 +209,8 @@
 
 # Memory Type (D3=DDR3, D4=DDR4, L=LPDDR2, W=WideIO, S=Serial). Additional memory types can be defined by the user in extio_technolog
 
--dram_type "DDR3"
-//-dram_type "DDR4"
+//-dram_type "DDR3"
+-dram_type "DDR4"
 //-dram_type "LPDDR2"
 //-dram_type "WideIO"
 //-dram_type "Serial"
@@ -256,7 +256,7 @@
 
 -num_dqs 2 //2 x differential pairs. Include ECC pins as well. Valid range 0 to 18. For x4 memories, could have 36 DQS pins.
 
-# Number of CA pins
+# Number of CA pins, command and address pins
 
 -num_ca 16 //Valid range 0 to 35 pins.
 
