--- a/cacti/3DDRAM_Design_Exploration/Configs/3DDRAM_DDR3_1Gb_512.cfg
+++ b/cacti/3DDRAM_Design_Exploration/Configs/3DDRAM_DDR3_1Gb_512.cfg
@@ -15,7 +15,7 @@
 //-size (bytes) 536870912
 //-size (bytes) 1073741824
 # For 3D DRAM memory please use Gb as units
--size (Gb) 1
+-size (Gb) 1 # Thus model each bank as 512MB
 
 # Line size
 //-block size (bytes) 8
@@ -34,7 +34,7 @@
 -single ended read ports 0
 
 # Multiple banks connected using a bus
--UCA bank count 4
+-UCA bank count 1
 //-technology (u) 0.032
 -technology (u) 0.040
 //-technology (u) 0.065
@@ -97,7 +97,7 @@
 -page size (bits) 8192
 
 -burst depth 1 // for 3D DRAM, IO per bank equals the product of burst depth and IO width
--IO width 512
+-IO width 128
 -system frequency (MHz) 800
 
 -stacked die count 4
@@ -145,8 +145,8 @@
 # Set it to NONE to let weight and deviate values determine the
 # appropriate cache configuration
 //-Optimize ED or ED^2 (ED, ED^2, NONE): "ED"
-//-Optimize ED or ED^2 (ED, ED^2, NONE): "ED^2"
--Optimize ED or ED^2 (ED, ED^2, NONE): "NONE"
+-Optimize ED or ED^2 (ED, ED^2, NONE): "ED^2"
+//-Optimize ED or ED^2 (ED, ED^2, NONE): "NONE"
 
 -Cache model (NUCA, UCA)  - "UCA"
 //-Cache model (NUCA, UCA)  - "NUCA"
@@ -163,8 +163,8 @@
 # wires to find an optimal configuration. However, it is possible to
 # restrict the search space by changing the signaling from "default" to
 # "fullswing" or "lowswing" type.
-//-Wire signaling (fullswing, lowswing, default) - "default"
--Wire signaling (fullswing, lowswing, default) - "Global_5"
+-Wire signaling (fullswing, lowswing, default) - "default"
+//-Wire signaling (fullswing, lowswing, default) - "Global_5"
 //-Wire signaling (fullswing, lowswing, default) - "lowswing"
 
 //-Wire inside mat - "global"
@@ -265,7 +265,7 @@
 -num_clk  2 //2 x differential pair. Valid values: 0/2/4.
 
 # Number of Physical Ranks
--num_mem_dq 4 //Number of ranks (loads on DQ and DQS) per buffer/register. If multiple LRDIMMs or buffer chips exist, the analysis fo
+-num_mem_dq 1 //Number of ranks (loads on DQ and DQS) per buffer/register. If multiple LRDIMMs or buffer chips exist, the analysis fo
 
 # Width of the Memory Data Bus
 
@@ -286,10 +286,10 @@
 # Parameter related to MemCAD
 
 # Number of BoBs: 1,2,3,4,5,6,
--num_bobs 1
+-num_bobs 4
 
 # Memory System Capacity in GB
--capacity 4
+-capacity 1
 
 # Number of Channel per BoB: 1,2.
 -num_channels_per_bob 1
