--- a/cacti/3DDRAM_configs/3DDRAM_Samsung3D8Gb_extened.cfg
+++ b/cacti/3DDRAM_configs/3DDRAM_Samsung3D8Gb_extened.cfg
@@ -34,19 +34,19 @@
 -single ended read ports 0
 
 # Multiple banks connected using a bus
--UCA bank count 8
+-UCA bank count 8 # This 8 is per die bank count.
 //-technology (u) 0.032
--technology (u) 0.045
+//-technology (u) 0.040
 //-technology (u) 0.065
 //-technology (u) 0.078
 //-technology (u) 0.080
 //-technology (u) 0.090
-//-technology (u) 0.050
+-technology (u) 0.050
 
 # following three parameters are meaningful only for main memories
 
 //-page size (bits) 8192
--burst length 4
+-burst length 4 # This does not make any difference
 -internal prefetch width 1
 
 # following parameter can have one of five values -- (itrs-hp, itrs-lstp, itrs-lop, lp-dram, comm-dram)
@@ -85,15 +85,15 @@
 
 # <Parameters for 3D DRAM and 2D main memory>
 //-page size (bits) 16384
--page size (bits) 8192
+-page size (bits) 8192 # 8192 bits = 1KB
 //-page size (bits) 4096
 -burst depth 8 // for 3D DRAM, IO per bank equals the product of burst depth and IO width
 -IO width 4
 -system frequency (MHz) 677
 
 -stacked die count 4
--partitioning granularity 1 // 0: coarse-grained rank-level; 1: fine-grained rank-level
--TSV projection 0 // 0: ITRS aggressive; 1: industrial conservative
+-partitioning granularity 0 // 0: coarse-grained rank-level; 1: fine-grained rank-level
+-TSV projection 1 // 0: ITRS aggressive; 1: industrial conservative
 
 ## End of parameters for 3D DRAM
 
@@ -135,8 +135,8 @@
 # Note: Optimize tag will disable weight or deviate values mentioned above
 # Set it to NONE to let weight and deviate values determine the
 # appropriate cache configuration
--Optimize ED or ED^2 (ED, ED^2, NONE): "ED"
-//-Optimize ED or ED^2 (ED, ED^2, NONE): "ED^2"
+//-Optimize ED or ED^2 (ED, ED^2, NONE): "ED"
+-Optimize ED or ED^2 (ED, ED^2, NONE): "ED^2"
 //-Optimize ED or ED^2 (ED, ED^2, NONE): "NONE"
 
 -Cache model (NUCA, UCA)  - "UCA"
@@ -154,8 +154,8 @@
 # wires to find an optimal configuration. However, it is possible to
 # restrict the search space by changing the signaling from "default" to
 # "fullswing" or "lowswing" type.
--Wire signaling (fullswing, lowswing, default) - "Global_30"
-//-Wire signaling (fullswing, lowswing, default) - "default"
+-Wire signaling (fullswing, lowswing, default) - "default"
+//-Wire signaling (fullswing, lowswing, default) - "Global_30"
 //-Wire signaling (fullswing, lowswing, default) - "lowswing"
 
 //-Wire inside mat - "global"
@@ -169,8 +169,8 @@
 # Contention in network (which is a function of core count and cache level) is one of
 # the critical factor used for deciding the optimal bank count value
 # core count can be 4, 8, or 16
-//-Core count 4
--Core count 8
+-Core count 4
+//-Core count 8
 //-Core count 16
 -Cache level (L2/L3) - "L3"
 
@@ -208,25 +208,24 @@
 
 # Memory State (R=Read, W=Write, I=Idle  or S=Sleep)
 
-//-io state  "READ"
--io state "WRITE"
+-io state  "READ"
+//-io state "WRITE"
 //-io state "IDLE"
 //-io state "SLEEP"
 
 #Address bus timing. To alleviate the timing on the command and address bus due to high loading (shared across all memories on the ch
-
+# These only influence IO
 //-addr_timing 0.5 //DDR
 -addr_timing 1.0 //SDR (half of DQ rate)
 //-addr_timing 2.0 //2T timing (One fourth of DQ rate)
 //-addr_timing 3.0 // 3T timing (One sixth of DQ rate)
 
-# Memory Density (Gbit per memory/DRAM die)
-
--mem_density 2 Gb //Valid values 2^n Gb
+# Memory Density (Gbit per memory/DRAM die), this paramter is actually useless
+-mem_density 1 Gb //Valid values 2^n Gb
 
 # IO frequency (MHz) (frequency of the external memory interface).
 
--bus_freq 333 MHz //As of current memory standards (2013), valid range 0 to 1.5 GHz for DDR3, 0 to 533 MHz for LPDDR2, 0 - 800 MHz fo
+-bus_freq 677 MHz //As of current memory standards (2013), valid range 0 to 1.5 GHz for DDR3, 0 to 533 MHz for LPDDR2, 0 - 800 MHz fo
 
 # Duty Cycle (fraction of time in the Memory State defined above)
 
@@ -236,33 +235,32 @@
 
 -activity_dq 1.0 //Valid range 0 to 1.0 for DDR, 0 to 0.5 for SDR
 
-# Activity factor for Control/Address (0->1 transitions) per cycle (for DDR, need to account for the higher activity in this paramete
+# Activity factor for Control/Address (0->1 transitions) per cycle (for DDR, need to account for the higher activity in this parameter
 
 -activity_ca 0.5 //Valid range 0 to 1.0 for DDR, 0 to 0.5 for SDR, 0 to 0.25 for 2T, and 0 to 0.17 for 3T
 
 # Number of DQ pins
 
--num_dq 72 //Number of DQ pins. Includes ECC pins.
+-num_dq 4 //Number of DQ pins. Includes ECC pins.
 
 # Number of DQS pins. DQS is a data strobe that is sent along with a small number of data-lanes so the source synchronous timing is l
 
--num_dqs 18 //2 x differential pairs. Include ECC pins as well. Valid range 0 to 18. For x4 memories, could have 36 DQS pins.
+-num_dqs 2 //2 x differential pairs. Include ECC pins as well. Valid range 0 to 18. For x4 memories, could have 36 DQS pins.
 
 # Number of CA pins
 
--num_ca 25 //Valid range 0 to 35 pins.
+-num_ca 16 //Valid range 0 to 35 pins.
 
 # Number of CLK pins. CLK is typically a differential pair. In some cases additional CLK pairs may be used to limit the loading on th
 
 -num_clk  2 //2 x differential pair. Valid values: 0/2/4.
 
 # Number of Physical Ranks
-
--num_mem_dq 2 //Number of ranks (loads on DQ and DQS) per buffer/register. If multiple LRDIMMs or buffer chips exist, the analysis fo
+-num_mem_dq 1 //Number of ranks (loads on DQ and DQS) per buffer/register. If multiple LRDIMMs or buffer chips exist, the analysis fo
 
 # Width of the Memory Data Bus
 
--mem_data_width 128 //x4 or x8 or x16 or x32 memories. For WideIO upto x128.
+-mem_data_width 4 //x4 or x8 or x16 or x32 memories. For WideIO upto x128.
 
 # RTT Termination Resistance
 
@@ -314,5 +312,5 @@
 -mirror_in_bob "F"
 
 #if we want to see all channels/bobs/memory configurations explored
-#-verbose "T"
+# -verbose "T"
 #-verbose "F"
