--- a/ramulator2/.vscode/launch.json
+++ b/ramulator2/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/ramulator2",
-            "args": ["-f","${workspaceFolder}/example_config_modified.yaml"],
+            "args": ["-f","${workspaceFolder}/config_files/3D_DRAM_analysis_config/3D_128.config.yaml"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/build",
             "environment": [],
@@ -29,9 +29,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/ramulator2",
-            "args": ["-f","${workspaceFolder}/ld_store_config.yaml"],
+            "args": ["-f","${workspaceFolder}/config_files/3D_DRAM_analysis_config/3D_1Gb_1_channel_config.yaml"],
             "stopAtEntry": true,
-            "cwd": "${workspaceFolder}/build",
+            "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
