--- a/ramulator2/config_files/3D_DRAM_analysis_config/3D_256Mb_1_channel_config.yaml
+++ b/ramulator2/config_files/3D_DRAM_analysis_config/3D_256Mb_1_channel_config.yaml
@@ -1,13 +1,12 @@
 Frontend:
   impl: SimpleO3
   clock_ratio: 8
-  num_expected_insts: 20000000
-  # num_expected_insts: 2000
+  num_expected_insts: 2000000
   llc_capacity_per_core: 1KB # Should be set as no cache, but this is a workaround
+  # YAML expects the following format for the traces, which is a trace_list
   traces:
-    # - /root/user/3D_DRAM_MODELING_MASTER/ramulator2/traces/low-mem-intensity.trace
+    # - /root/user/3D_DRAM_MODELING_MASTER/traces/high-mem-intensity.trace
     - /root/user/3D_DRAM_MODELING_MASTER/ramulator2/traces/high-mem-intensity.trace
-    # - /root/user/3D_DRAM_MODELING_MASTER/ramulator2/ld_st_trace.trace
 
   Translation:
     impl: RandomTranslation
@@ -21,7 +20,7 @@ MemorySystem:
     impl: DDR4
 
     drampower_enable: true # This can enable dram power model
-    structure_type: 2
+    structure_type: 1
     # The preset of DRAM voltage and current must be specified, also the preset for power modeling has to exists within.
     voltage:
       preset: Default # Sets to Default to enable basic voltage adjustment
@@ -30,7 +29,9 @@ MemorySystem:
 
     org:
       preset: DDR4_256Mb_x128
-      channel: 4
+      channel_width: 128
+      # preset: DDR4_2Gb_x4
+      channel: 1
       rank: 1
     timing:
       preset: DDR4_3DDRAM_128
@@ -39,7 +40,7 @@ MemorySystem:
   Controller:
     impl: Generic
     Scheduler:
-      impl: FCFS
+      impl: FRFCFS
     RefreshManager:
       impl: AllBank
     RowPolicy:
