--- a/ramulator2/config_files/3D_DRAM_analysis_config/3D_256Mb_1_channel_config.yaml
+++ b/ramulator2/config_files/3D_DRAM_analysis_config/3D_256Mb_1_channel_config.yaml
@@ -1,20 +1,21 @@
 Frontend:
   impl: SimpleO3
   clock_ratio: 8
-  num_expected_insts: 30000000
+  num_expected_insts: 100000
   llc_capacity_per_core: 1KB # Should be set as no cache, but this is a workaround
   # YAML expects the following format for the traces, which is a trace_list
   traces:
-    - /root/user/traces/high-mem-intensity.trace
+    - /root/user/3D_DRAM_MODELING_MASTER/ramulator2/traces/marching_pattern_256Mb.trace
+    # - /root/user/traces/high-mem-intensity.trace
     # - /root/user/3D_DRAM_MODELING_MASTER/ramulator2/traces/high-mem-intensity.trace
 
-  Translation:
-    impl: RandomTranslation
-    max_addr: 2199015689679
-
   # Translation:
-    # impl: NoTranslation
-    # max_addr: 33554432
+  #   impl: RandomTranslation
+  #   max_addr: 2199015689679
+
+  Translation:
+    impl: NoTranslation
+    max_addr: 33554432
 
 MemorySystem:
   impl: GenericDRAM
@@ -32,7 +33,7 @@ MemorySystem:
       preset: Default
 
     org:
-      preset: DDR4_256Mb_x128
+      preset: DDR4_256Mb_x1_x128
       # channel_width: 128
       # preset: DDR4_2Gb_x4
       channel: 1
@@ -56,6 +57,9 @@ MemorySystem:
           path: ./cmd_records/256Mb_1ch.cmds
           commands_to_count:
             - REFab
+      - ControllerPlugin:
+          impl: TraceRecorder
+          path: ./cmd_records/256Mb_1ch.cmds
 
   AddrMapper:
     impl: RoBaRaCoCh
