Building a generic in order DRAM system

--- a/ramulator2/.vscode/launch.json
+++ b/ramulator2/.vscode/launch.json
@@ -4,10 +4,10 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/ramulator2",
-            "args": ["-f","${workspaceFolder}/config_files/3D_DRAM_analysis_config/3D_128.config.yaml"],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/build",
+            "program": "${workspaceFolder}/build/ramulator2",
+            "args": ["-f","${workspaceFolder}/config_files/3D_DRAM_analysis_config/3D_256Mb_2_channel_config.yaml"],
+            "stopAtEntry": true,
+            "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
