--- a/ramulator2/config_files/test/testing_in_order_ld_st_stall.yaml
+++ b/ramulator2/config_files/test/testing_in_order_ld_st_stall.yaml
@@ -1,13 +1,11 @@
 Frontend:
   impl: LoadStoreStallTrace
   clock_ratio: 3
-  # num_expected_insts: 100000
-  # llc_capacity_per_core: 1KB # Should be set as no cache, but this is a workaround
-  # YAML expects the following format for the traces, which is a trace_list
-  path: /root/user/3D_DRAM_MODELING_MASTER/ramulator2/traces/ld_st_trace.trace
-    # - /root/user/traces/high-mem-intensity.trace
-    # - /root/user/3D_DRAM_MODELING_MASTER/ramulator2/traces/high-mem-intensity.trace
-
+  num_expected_insts: 100
+  traces: 
+    - /home/sicajc/user/Senior_3D_DRAM/ramulator2/traces/trace_0.txt
+    - /home/sicajc/user/Senior_3D_DRAM/ramulator2/traces/trace_1.txt
+   
   # Translation:
   #   impl: RandomTranslation
   #   max_addr: 2199015689679
