Generate Worst case, Ideal case and Random Sequential Access Patterns for analysis

--- a/ramulator2/config_files/test/testing_in_order_ld_st_stall.yaml
+++ b/ramulator2/config_files/test/testing_in_order_ld_st_stall.yaml
@@ -55,12 +55,12 @@ MemorySystem:
     plugins:
       - ControllerPlugin:
           impl: CommandCounter
-          path: ./cmd_records/1024Mb_1ch.cmds
+          path: ../cmd_records/1024Mb_1ch.cmds
           commands_to_count:
             - REFab
       - ControllerPlugin:
           impl: TraceRecorder
-          path: ./cmd_records/1024Mb_2ch.trace
+          path: ../cmd_records/1024Mb_2ch.trace
 
   AddrMapper:
     impl: ChRaBaRoCo
