--- a/ramulator2/config_files/test/testing_in_order_ld_st_stall_ideal.yaml
+++ b/ramulator2/config_files/test/testing_in_order_ld_st_stall_ideal.yaml
@@ -1,10 +1,10 @@
 Frontend:
   impl: LoadStoreStallTrace
   clock_ratio: 3
-  num_expected_insts: 1000
+  num_expected_insts: 50000
   traces:
-    # - ../traces/trace_0.txt
-    - /home/sicajc/user/sicajc/main/Senior_3D_DRAM/ramulator2/traces/trace_0.txt
+    - ../traces/_ideal_sequential_trace_0.txt
+    # - /home/sicajc/user/sicajc/main/Senior_3D_DRAM/ramulator2/traces/trace_0.txt
     # - /home/sicajc/DRAM_PROJECT/Senior_3D_DRAM/ramulator2/traces/trace_1.txt
     # - /home/sicajc/DRAM_PROJECT/Senior_3D_DRAM/ramulator2/traces/trace_2.txt
     # - /home/sicajc/DRAM_PROJECT/Senior_3D_DRAM/ramulator2/traces/trace_3.txt
@@ -55,12 +55,12 @@ MemorySystem:
     plugins:
       - ControllerPlugin:
           impl: CommandCounter
-          path: ../cmd_records/1024Mb_1ch.cmds
+          path: ../cmd_records/ideal_1024Mb_1ch.cmds
           commands_to_count:
             - REFab
       - ControllerPlugin:
           impl: TraceRecorder
-          path: ../cmd_records/1024Mb_2ch.trace
+          path: ../cmd_records/ideal_1024Mb_2ch.trace
 
   AddrMapper:
     impl: ChRaBaRoCo
