--- a/ramulator2/config_files/test/testing_in_order_ld_st_stall_worst_case.yaml
+++ b/ramulator2/config_files/test/testing_in_order_ld_st_stall_worst_case.yaml
@@ -1,12 +1,14 @@
 Frontend:
-  impl: LoadStoreTrace
+  impl: LoadStoreStallTrace
   clock_ratio: 3
-  # num_expected_insts: 100000
-  # llc_capacity_per_core: 1KB # Should be set as no cache, but this is a workaround
-  # YAML expects the following format for the traces, which is a trace_list
-  path: /root/user/3D_DRAM_MODELING_MASTER/ramulator2/traces/ld_st_trace.trace
-    # - /root/user/traces/high-mem-intensity.trace
-    # - /root/user/3D_DRAM_MODELING_MASTER/ramulator2/traces/high-mem-intensity.trace
+  num_expected_insts: 50000
+  traces:
+    - ../traces/_worst_case_trace_0.txt
+    # - /home/sicajc/user/sicajc/main/Senior_3D_DRAM/ramulator2/traces/trace_0.txt
+    # - /home/sicajc/DRAM_PROJECT/Senior_3D_DRAM/ramulator2/traces/trace_1.txt
+    # - /home/sicajc/DRAM_PROJECT/Senior_3D_DRAM/ramulator2/traces/trace_2.txt
+    # - /home/sicajc/DRAM_PROJECT/Senior_3D_DRAM/ramulator2/traces/trace_3.txt
+
 
   # Translation:
   #   impl: RandomTranslation
@@ -32,13 +34,13 @@ MemorySystem:
     #   preset: Default
 
     org:
-      preset: DDR4_256Mb_x1_x128
-      # channel_width: 128
+      preset: DDR4_1Gb_1bank_x1024
+      channel_width: 1024
       # preset: DDR4_2Gb_x4
-      channel: 2
+      channel: 1
       rank: 1
     timing:
-      preset: DDR4_3DDRAM_128
+      preset: DDR4_3DDRAM_1024
 
 
   Controller:
@@ -53,12 +55,12 @@ MemorySystem:
     plugins:
       - ControllerPlugin:
           impl: CommandCounter
-          path: ./cmd_records/256Mb_1ch.cmds
+          path: ../cmd_records/worst_1024Mb_1ch.cmds
           commands_to_count:
             - REFab
       - ControllerPlugin:
           impl: TraceRecorder
-          path: ./cmd_records/256Mb_2ch.trace
+          path: ../cmd_records/worst_1024Mb_2ch.trace
 
   AddrMapper:
     impl: ChRaBaRoCo
