--- a/ramulator2/config_files/test/testing_in_order_ld_st_stall_worst_case.yaml
+++ b/ramulator2/config_files/test/testing_in_order_ld_st_stall_worst_case.yaml
@@ -1,7 +1,7 @@
 Frontend:
   impl: LoadStoreStallTrace
   clock_ratio: 3
-  num_expected_insts: 100
+  num_expected_insts: 50000
   debug: false
   traces:
     - ../traces/_worst_case_trace_0.txt
@@ -46,6 +46,7 @@ MemorySystem:
 
   Controller:
     impl: Generic
+    sample_time: 2000
     Scheduler:
       impl: FCFS
     RefreshManager:
