--- a/ramulator2/config_files/test/testing_in_order_ld_st_stall_ideal.yaml
+++ b/ramulator2/config_files/test/testing_in_order_ld_st_stall_ideal.yaml
@@ -1,7 +1,7 @@
 Frontend:
   impl: LoadStoreStallTrace
   clock_ratio: 3
-  num_expected_insts: 50000
+  num_expected_insts: 100000
   debug: false
   traces:
     - ../traces/_ideal_sequential_trace_0.txt
@@ -46,7 +46,8 @@ MemorySystem:
 
   Controller:
     impl: Generic
-    sample_time: 2000
+    sample_time: 500
+    bandwidth_record_file: /home/sicajc/user/sicajc/main/Senior_3D_DRAM/ramulator2/cmd_records/bandwidth_record_ideal.txt
     Scheduler:
       impl: FCFS
     RefreshManager:
