--- a/Memory_Controller/Chang_DDR/Write_Burst_data.rc
+++ b/Memory_Controller/Chang_DDR/Write_Burst_data.rc
@@ -2,7 +2,7 @@ Magic 271485
 Revision Verdi_T-2022.06
 
 ; Window Layout <x> <y> <width> <height> <signalwidth> <valuewidth>
-viewPort 1920 23 1920 1009 338 186
+viewPort 1920 23 1920 1009 412 224
 
 ; File list:
 ; openDirFile [-d delimiter] [-s time_offset] [-rf auto_bus_rule_file] path_name file_name
@@ -16,14 +16,14 @@ signalSpacing 5
 
 ; windowTimeUnit is used for zoom, cursor & marker
 ; waveform viewport range
-zoom 1882137.122254 1967403.329971
-cursor 52734000.000000
+zoom 54299211.254058 54340881.574185
+cursor 1908000.000000
 marker 0.000000
 
 ; user define markers
 ; userMarker time_pos marker_name color linestyle
 ; visible top row signal index
-top 21
+top 56
 ; marker line index
 markerPos 87
 
@@ -111,6 +111,7 @@ addSignal -h 21 -UNSIGNED -HEX -holdScope tP_baxx[4:0]
 addSignal -h 21 -UNSIGNED -HEX -holdScope tP_bax[4:0]
 addSignal -h 21 -UNSIGNED -HEX -holdScope tP_recodex[2:0]
 addSignal -h 21 -UNSIGNED -HEX -holdScope tP_recodexx[2:0]
+addGroup "W_DATA_FIFO"
 addGroup "DDR PHY"
 addSignal -h 21 /TESTBED/I_Package/Rank0/clk
 addSignal -expanded -h 21 -UNSIGNED -holdScope d_state[3:0]
@@ -162,5 +163,3 @@ SCOPE_LIST_BEGIN
 SCOPE_LIST_END
 
 GETSIGNALFORM_SCOPE_HIERARCHY_END
-
-
