--- a/Memory_Controller/Chang_DDR/novas.rc
+++ b/Memory_Controller/Chang_DDR/novas.rc
@@ -202,6 +202,8 @@ StickSet-FillColor = ID_PURPLE6
 StickSet-TextColor = ID_BLACK
 [FSM_Dlg-Print]
 Orientation = Landscape
+[FileBrowser]
+nWaveOpenFsdbDirHistory = "\"/home/2023_summer/2023train11/Seniors_DDR3/Chang_DDR/Package.fsdb\"" "\"/home/2023_summer/2023train11/Seniors_DDR3/Chang_DDR/Write_Burst.rc\"" "\"/home/2023_summer/2023train11/Seniors_DDR3/Chang_DDR/Write_Burst_data.rc\""
 [Form]
 version = Verdi_T-2022.06
 [General]
@@ -209,10 +211,10 @@ autoSaveSession = FALSE
 TclAutoSource = 
 cmd_enter_form = FALSE
 SyncBrowserDir = TRUE
-SignalCaseInSensitive = FALSE
+verdiAppFont = "Bitstream Vera Sans,-1,18,5,50,0,0,0,0,0", ""
 verdiMonoFont = "Courier 24"
 version = Verdi_T-2022.06
-verdiAppFont = "Bitstream Vera Sans,-1,18,5,50,0,0,0,0,0", ""
+SignalCaseInSensitive = FALSE
 [GlobalProp]
 ErrWindow_Font = Helvetica_M_R_18
 [Globals]
@@ -321,15 +323,15 @@ FileName = test.ps
 PaperSize = A4 - 210x297 (mm)
 ColorPrint = FALSE
 [QtDialog]
-QwWarnMsgDlg = 2570,375,600,250
 unknownSave = 80,78,461,245
 saveSigDlg = 2604,334,551,386
-QwUserAskDlg = 2708,423,324,110
-qWaveSignalDialog = 2480,288,800,479
-openFileDlg = 2579,290,602,483
 verdiNewFontDlg = 2529,264,500,360
 verdiMonoFontDlg = 2433,210,366,432
 qPrefDlg = 2268,254,716,424
+qWaveSignalDialog = 2464,288,831,479
+QwUserAskDlg = 2708,253,324,226
+openFileDlg = 2578,286,604,483
+QwWarnMsgDlg = 2570,375,600,250
 [Session Cache]
 1 = string (session file name)
 2 = string (session file name)
@@ -604,7 +606,11 @@ ShowDeltaTime = TRUE
 WaveExtendLastTick = TRUE
 displayMessageLabelOnly = TRUE
 AutoApplySeverityColor = TRUE
-viewPort = 0 23 1536 793 100 65
+scope_to_save_with_macro
+open_file_dir
+open_rc_file_dir
+getSignalForm = 2464 288 831 479 366 372 415 178
+viewPort = 1920 23 1920 1009 412 224
 legendBackground = -c ID_BLACK
 valueBackground = -c ID_BLACK
 curveBackground = -c ID_BLACK
@@ -744,7 +750,6 @@ displayDeltaY = FALSE
 signal_rc_abspath = TRUE
 signal_rc_no_natural_bus_range = FALSE
 save_scope_with_macro = FALSE
-scope_to_save_with_macro
 FitAnaByBusSize = FALSE
 DisplayVerticalZoomTools = FALSE
 DisplayIndicateBar = FALSE
@@ -771,28 +776,27 @@ printBasic = 1 0 0 FALSE FALSE
 printDest = -printer {}
 printSignature = {%f %h %t} {}
 curveWindow_Drag&Drop_Mode = TRUE
+RecentFile1 = "\"/home/2023_summer/2023train11/Seniors_DDR3/Chang_DDR/Package.fsdb\""
 open_file_time_range = FALSE
-open_file_dir
-open_rc_file_dir
-legend_window_font = -f COURIER12 -c ID_CYAN5
-value_window_font = -f COURIER12 -c ID_CYAN5
-curve_window_font = -f COURIER12 -c ID_CYAN5
-group_name_font = -f COURIER12 -c ID_GREEN5
-ruler_value_font = -f COURIER12 -c ID_CYAN5
-analog_ruler_value_font = -f COURIER12 -c ID_CYAN5
-comment_string_font = -f COURIER12 -c ID_RED5
-getsignal_form_font = -f COURIER12
+legend_window_font = -f COURIER24 -c ID_CYAN5
+value_window_font = -f COURIER24 -c ID_CYAN5
+curve_window_font = -f COURIER24 -c ID_CYAN5
+group_name_font = -f COURIER24 -c ID_GREEN5
+ruler_value_font = -f COURIER24 -c ID_CYAN5
+analog_ruler_value_font = -f COURIER24 -c ID_CYAN5
+comment_string_font = -f COURIER24 -c ID_RED5
+getsignal_form_font = -f COURIER24 
 SigsCheckNum = on 1000
 filter_synthesized_net = off n
 filterOutNet = on
 exclude_signal_with_prefix = off n
 synthesizeNetOnly = on
-filter_synthesized_instance = off
+filter_synthesized_instance = off 
 filterOutInstance = on
 showGroupTree = TRUE
 hierGroupDelim = /
 MsgSeverityColor = {y \"Severity\"==\"1\" ID_RED5} {y \"Severity\"==\"2\" ID_RED6} {y \"Severity\"==\"3\" ID_RED7} {y \"Severity\"==\"4\" ID_RED8} {y \"Severity\"==\"5\" ID_ORANGE5} {y \"Severity\"==\"6\" ID_ORANGE6} {y \"Severity\"==\"7\" ID_ORANGE7} {y \"Severity\"==\"8\" \
-ID_GREEN7} {y \"Severity\"==\"9\" ID_GREEN6} {y \"Severity\"==\"10\" ID_GREEN5}
+ID_GREEN7} {y \"Severity\"==\"9\" ID_GREEN6} {y \"Severity\"==\"10\" ID_GREEN5} 
 waveDblClkActiveTrace = on
 SEQShowComparisonIcon = TRUE
 SEQAddDriverLoadInSameGroup = TRUE
@@ -804,7 +808,6 @@ maskFsaRegRule = TRUE
 maskFsaCoreRule = TRUE
 maskFsaSfsmRule = TRUE
 maskFsaEcrRule = TRUE
-getSignalForm = 2480 288 800 479 245 381 505 183
 [cov_hier_name_column]
 justify = TRUE
 [coverageColors]
@@ -933,7 +936,7 @@ showCellBitRangeWithAddr = TRUE
 wordsShownInOneRow = 8
 syncCursorTime = FALSE
 fixCellColumnWidth = FALSE
-font = Courier 12
+font = Courier 24
 [planColors]
 plan_fillColor_inactive = lightGray
 plan_fillColor_warning = orange
