--- a/cacti/.vscode/launch.json
+++ b/cacti/.vscode/launch.json
@@ -1,11 +1,35 @@
 {
     "configurations": [
         {
+            "name": "(gdb) Launch",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/cacti",
+            "args": ["-infile","python_script_testing/3DDRAM_Design_Exploration/Configs/tsv_1024_Page16384_Stack4_Size4_Bank1024_Mb.cfg"],
+            "stopAtEntry": true,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "name": "(UDB)  Launch",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/cacti",
-            "args": ["-infile","3DDRAM_Design_Exploration/Configs/3DDRAM_DDR3_1Gb_128.cfg"],
+            "args": ["-infile",""],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
