--- a/ramulator2/testing_in_order_ld_st_stall_ideal_debug.yaml
+++ b/ramulator2/testing_in_order_ld_st_stall_ideal_debug.yaml
@@ -1,73 +1,73 @@
 Frontend:
   impl: LoadStoreStallTrace
   clock_ratio: 3
-  num_expected_insts: 1000
+  num_expected_insts: 10000
   debug: true
   traces:
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_0.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_1.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_2.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_3.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_4.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_5.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_6.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_7.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_8.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_9.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_10.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_11.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_12.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_13.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_14.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_15.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_16.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_17.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_18.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_19.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_20.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_21.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_22.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_23.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_24.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_25.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_26.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_27.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_28.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_29.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_30.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_31.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_32.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_33.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_34.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_35.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_36.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_37.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_38.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_39.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_40.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_41.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_42.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_43.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_44.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_45.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_46.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_47.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_48.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_49.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_50.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_51.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_52.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_53.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_54.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_55.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_56.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_57.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_58.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_59.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_60.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_61.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_62.txt
-    - /home/sicajc/user/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_63.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_0.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_1.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_2.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_3.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_4.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_5.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_6.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_7.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_8.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_9.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_10.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_11.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_12.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_13.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_14.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_15.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_16.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_17.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_18.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_19.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_20.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_21.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_22.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_23.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_24.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_25.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_26.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_27.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_28.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_29.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_30.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_31.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_32.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_33.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_34.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_35.txt
+    - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_36.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_37.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_38.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_39.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_40.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_41.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_42.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_43.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_44.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_45.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_46.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_47.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_48.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_49.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_50.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_51.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_52.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_53.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_54.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_55.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_56.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_57.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_58.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_59.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_60.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_61.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_62.txt
+    # - /home/sicajc/DRAM_PROJECT/Master_Thesis_MC/ramulator2/traces/_ideal_sequential_trace_63.txt
 
     # - ../traces/_ideal_sequential_trace_0.txt
     # - ../traces/_ideal_sequential_trace_1.txt
