Resolve Naming conflict in ramulator2, bankLevel vs Generic

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "cppdbg",
       "request": "launch",
       "args": [],
-      "stopAtEntry": false,
+      "stopAtEntry": true,
       "externalConsole": true,
       "cwd": "c:/Users/kevin/Desktop/Senior_3D_DRAM/ramulator2/src/frontend/impl/memory_trace",
       "program": "c:/Users/kevin/Desktop/Senior_3D_DRAM/ramulator2/src/frontend/impl/memory_trace/build/Debug/outDebug",
