--- a/ramulator2/testing_in_order_ld_st_stall_ideal_debug.yaml
+++ b/ramulator2/testing_in_order_ld_st_stall_ideal_debug.yaml
@@ -174,7 +174,7 @@ MemorySystem:
 
 
   Controller:
-    impl: Generic
+    impl: BankLevelController
     sample_time: 500
     bandwidth_record_file: ../cmd_records/bandwidth_record_ideal.txt
     Scheduler:
