--- a/ramulator2/config_files/test/testing_in_order_ld_st_stall_ideal.yaml
+++ b/ramulator2/config_files/test/testing_in_order_ld_st_stall_ideal.yaml
@@ -53,7 +53,7 @@ MemorySystem:
     RefreshManager:
       impl: AllBank
     RowPolicy:
-      impl: OpenRowPolicy
+      impl: ClosedRowPolicy
       cap: 4
     plugins:
       - ControllerPlugin:
